--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \usepackage[english]{babel}
 \usepackage{pdfpages}
 \usepackage{fancyhdr}
+
 \usepackage{titlepic}
 
 \addto\captionsenglish{\renewcommand{\chaptername}{Part}}
@@ -103,7 +104,10 @@
 \subfile{sections/Questions/s0.tex}
 
 \chapter{Research}
+\subfile{sections/Research/s0.tex}
 
 \chapter{Answers}
+I'll be creating a paragraph for my second question, "What is the significance of this photo? Why does it exist?"
+\subfile{sections/Answers/s0.tex}
 
 \end{document}  
